test/bad/type_missmatch_18.mpp
fun bar():bool { return 1; };
